crates/carta/tests/snapshots/golden_e2e__typst__latex__data-yaml.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
k: 7 list:

\begin{itemize}
\item
  one
\item
  two
\end{itemize}
