crates/carta/tests/snapshots/golden_e2e__typst__latex__emoji.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A sun ☀ and a rocket 🚀.

Faces 😄 and 😭.

Arrows ➡ and ⬅.
