crates/carta/tests/snapshots/golden_e2e__typst__latex__footnotes.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A sentence with a footnote.\footnote{The note body.}

A second note\footnote{A note with two blocks.

  The second block.}
