crates/carta/tests/snapshots/golden_e2e__typst__latex__function-values.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Renamed: \emph{slanted}. Fixed: tinted. Applied: \emph{direct}, echo
echo. Passed: (2, 3, 4).
