crates/carta/tests/snapshots/golden_e2e__typst__latex__greek-symbols.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Uppercase: Α Β Γ Δ Ε Ζ Η Θ Ι Κ Λ Μ Ν Ξ Ο Π Ρ Σ Τ Υ Φ Χ Ψ Ω

\[Α + Β + \Gamma + \Delta + Ε + Ζ + Η + \Theta\]

\[Ι + Κ + \Lambda + Μ + Ν + \Xi + Ο + Ρ\]

\[\Pi + \Sigma + Τ + \Upsilon + \Phi + Χ + \Psi + \Omega\]
