crates/carta/tests/snapshots/golden_e2e__typst__latex__heading-labels.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\section{Introduction}\label{intro}

\section{Methods}\label{methods}

\section{Results}\label{results}

and more text.

See \hyperref[intro]{{[}intro{]}}, \hyperref[methods]{{[}methods{]}},
and \hyperref[results]{{[}results{]}}.
